samples/_failures_safe/1761368505_7bb546_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c0e8e19.c: In function ‘main’:
./samples/SAFE/__tmp_3c0e8e19.c:151:28: error: missing terminating " character
  151 |                     printf("Matrix A + B
      |                            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_3c0e8e19.c:151:21: error: expected expression at end of input
  151 |                     printf("Matrix A + B
      |                     ^~~~~~
./samples/SAFE/__tmp_3c0e8e19.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c0e8e19.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c0e8e19.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c0e8e19.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c0e8e19.c:151:21: error: expected declaration or statement at end of input
